# MicroQuad

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
components/ESP32Servo/: CMakeLists.txt
components/ESP32Servo/include/: ESP32PWM.h  ESP32Servo.h
components/ESP32Servo/src/: ESP32PWM.cpp  ESP32Servo.cpp  ESP32_Servo.cpp
components/FastLED/: CMakeLists.txt
components/FastLED/src/: noise.cpp
components/Fusion/: CMakeLists.txt
components/Fusion/src/: FusionAhrs.cpp
components/MPU6050/: CMakeLists.txt
components/MPU6050/include/: MPU6050_6Axis_MotionApps20.h  MPU6050_6Axis_MotionApps_V6_12.h  MPU6050_9Axis_MotionApps41.h
components/MicroQuad/include/: AsyncController.h  DebugHelper.h  DiagnosticsWriter.h  Logger.h  PIDController.h  ParameterProvider.h  QuadcopterController.h  RegisteredParameters.h
components/MicroQuad/src/: AsyncController.cpp  DebugDataManager.cpp  DebugHelper.cpp  DiagnosticsWriter.cpp  Logger.cpp  PIDController.cpp  ParameterProvider.cpp  QuadcopterController.cpp
components/arduino/: CMakeLists.txt
components/driver/: gpio.c
components/esp_adc_cal/: esp_adc_cal_common.c
components/esp_adc_cal/esp32s3/: esp_adc_cal.c
components/i2cdev/include/: I2Cdev.h
components/i2cdev/src/: I2Cdev.cpp
components/icm42688P/include/: ICM42688.h  registers.h
components/icm42688P/src/: ICM42688.cpp
ios_app/: .gitignore  README.md
ios_app/.cursor/rules/: ios_common.mdc
ios_app/QuadController/: CommonDefs.swift  HelperExtensions.swift  Info.plist  QuadController-Bridging-Header.h  QuadControllerApp.swift  WeakReference.swift
ios_app/QuadController.xcodeproj/: project.pbxproj
ios_app/QuadController/Controllers/: ArmStatusController.swift  BLEController.swift  BLEControllerLargeDataBlobTransmission.swift  BluetoothJoystickController.swift  CalibrationController.swift  CameraController.swift  GPSController.swift  PIDControlller.swift
ios_app/QuadController/Models/: AlertModels.swift  CalibrationValues.swift  QuadStatus.swift  StickConfiguration.swift  StickUpdateParams.swift
main/: BLEController.cpp  BLEController.h  CMakeLists.txt  ElectronicSpeedController.cpp  ElectronicSpeedController.h  IMU.cpp  IMU.h  debug_util.cpp  debug_util.h  diagnostics.cpp  diagnostics.h  led_controller.cpp  led_controller.h  main.cpp  mpu6000.h  mpu6x00.h
matlab_sim/: .gitignore  README.md  Shared.cpp  Shared.h  analyze_flight.asv  analyze_flight.m  build_mex.sh  components  main  mex_gateway.cpp  mex_gateway.mexmaca64  plot_comparison.m  quadcopter_debug.csv  quadcopter_debug2.csv  quadcopter_debug3.csv  quadcopter_debug4.csv  quadcopter_debug5.csv  quadcopter_debug6.csv
quadcopter_firmware/: .clang-format  CMakeLists.txt  run_tests.sh
quadcopter_firmware/.cursor/rules/: formatting_rules.mdc  general_firmware_rules.mdc
quadcopter_firmware/components/DShot/: CMakeLists.txt
quadcopter_firmware/components/DShot/src/: dshot_esc_encoder.c
quadcopter_firmware/components/ESP32Servo/: component.mk
quadcopter_firmware/components/ESP32Servo/include/: ESP32PWM.h
quadcopter_firmware/components/ESP32Servo/src/: ESP32PWM.cpp  ESP32Servo.cpp
quadcopter_firmware/components/Fusion/include/: FusionAhrs.h  FusionOffset.h
quadcopter_firmware/components/Fusion/src/: FusionAhrs.cpp  FusionCompass.cpp
quadcopter_firmware/components/Matrix/: CHANGES.md  CMakeLists.txt  README.md
quadcopter_firmware/components/Matrix/.cursor/rules/: matrix_general_rules.mdc
quadcopter_firmware/components/Matrix/examples/: nd_matrix_example.cpp
quadcopter_firmware/components/Matrix/include/: Matrix.h  Matrix_AccelerationImp.h  Matrix_ExpressionTemplates.h  Matrix_Imp.h
quadcopter_firmware/components/Matrix/test/: CMakeLists.txt
quadcopter_firmware/components/Matrix/test/include/: MatrixTestHelpers.h
quadcopter_firmware/components/Matrix/test/src/: MatrixOperatorTests.cpp  MatrixTests.cpp
quadcopter_firmware/components/MicroQuad/: CMakeLists.txt
quadcopter_firmware/components/MicroQuad/include/: AsyncController.h  DebugDataManager.h  DebugHelper.h  Logger.h  PIDController.h  QuadcopterController.h
quadcopter_firmware/components/MicroQuad/src/: AsyncController.cpp  DebugDataManager.cpp  DebugHelper.cpp  Logger.cpp  PIDController.cpp  QuadcopterController.cpp
quadcopter_firmware/components/TinyGPSPlus/: CMakeLists.txt
quadcopter_firmware/components/esp-nimble-cpp/: idf_component.yml
quadcopter_firmware/components/icm42688P/include/: ICM42688.h
quadcopter_firmware/components/icm42688P/src/: ICM42688.cpp
quadcopter_firmware/components/mdns/private_include/: mdns_private.h
quadcopter_firmware/components/qmc5883l/: CMakeLists.txt
quadcopter_firmware/components/qmc5883l/include/: DFRobot_QMC5883.h  QMC5883L.h
quadcopter_firmware/components/qmc5883l/src/: DFRobot_QMC5883.cpp  QMC5883L.cpp
quadcopter_firmware/main/: BLEController.cpp  BLEController.h  BLEControllerLargeDataTransmissionHandler.cpp  BLEControllerLargeDataTransmissionHandler.h  BLELargeDataBlobType.h  Barometer.cpp  Barometer.h  BatteryController.cpp  BatteryController.h  BatteryControllerEnums.h  BatteryStatus.h  CMakeLists.txt  CalibrationEvent.h  Constants.h  CrossPlatformEnum.h  EKFAttitudeAltitude.cpp  EKFAttitudeAltitude.h  GPSQuickStartupController.cpp  GPSQuickStartupController.h  GPSService.cpp  GPSService.h  IMU.cpp  IMU.h  LEDController.cpp  LEDController.h  MagnetometerCalibrator.cpp  MagnetometerCalibrator.h  MahonyAHRS.cpp  MahonyAHRS.h  MotionDetector.cpp  MotionDetector.h  MotorController.cpp  MotorController.h  MotorMagCompensationHandler.cpp  MotorMagCompensationHandler.h  PIDPreferences.cpp  PIDPreferences.h  PersistentKeyValueStore.cpp  PersistentKeyValueStore.h  PersistentKeysCommon.h  (+10 more)
quadcopter_firmware/main/Filters/: ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h  KalmanFilter.cpp  KalmanFilter.h  MedianFilter.cpp  MedianFilter.h
quadcopter_firmware/other_components/esp32-arduino-lib-builder/main/: idf_component.yml
quadcopter_firmware/test/: CMakeLists.txt  Makefile  README.md  test_median_filter.cpp
(+13 files in other folders)
